# mermaid-rs-remote-renderer

./: .dockerignore  .env.example  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  docker-compose.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: cd.yml  ci.yml
assets/: index.html
src/: config.rs  decode.rs  lib.rs  main.rs  render.rs
tests/: http_endpoints.rs
tests/fixtures/: flowchart_basic.mmd  pie_basic.mmd
